# http-mcp-server

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
src/http_mcp/: __init__.py  server.py
